Correct test results.
        * platform/mac/fast/layers/layer-visibility-expected.txt:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27490 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-06  Antti Koivisto  <antti@apple.com>
 
+        Correct test results.
+
+        * platform/mac/fast/layers/layer-visibility-expected.txt:
+
+2007-11-06  Antti Koivisto  <antti@apple.com>
+
         Reviewed by Hyatt.
         
         Update test to cover
