Corrected ChangeLog grammar.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27506 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,7 +1,7 @@
 2007-11-07  Alexey Proskuryakov  <ap@nypop.com>
 
         Finished moving editing/pasteboard/5583362.html to platform/mac (this test was crashing in ObjC test plugin,
-        because it couldn't find its resources.
+        because it couldn't find its resources).
 
         * editing/resources/plaintext-pasteboard-data.dat: Removed.
         * platform/mac/editing/resources: Added.
