Fix compilation on Windows with non-cygwin perl.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27508 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Mark.
+
+        Fix compilation on Windows with non-cygwin perl. open FILE, "|-" is
+        not supported due to implicit forks, use IPC::Open2 instead.
+
+        * bindings/scripts/IDLParser.pm:
+
 2007-11-07  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Brady Eidson.
