Use the correct function calls to convert a selection to HTML or plain text.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27512 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,21 @@
 
         Reviewed by Simon.
 
+        Use the correct function calls to convert a selection to
+        HTML or plain text.
+
+        WARNING: NO TEST CASES ADDED OR CHANGED
+
+        * platform/qt/ClipboardQt.cpp:
+        (WebCore::ClipboardQt::setData):
+        (WebCore::ClipboardQt::writeRange):
+        * platform/qt/PasteboardQt.cpp:
+        (WebCore::Pasteboard::writeSelection):
+
+2007-11-07  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         Some more clipboard fixes.
         
         We have to set things immediately on the QClipBoard if the
