--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Mark.
+
+        Implemented the two Javascript prompt callbacks in qt/DumpRenderTree
+        to prevent the default implementation from popping up messageboxes.
+
+        * DumpRenderTree/qt/DumpRenderTree.cpp:
+        (WebCore::WebPage::javaScriptConfirm):
+        (WebCore::WebPage::javaScriptPrompt):
+
 2007-11-06  Eric Seidel  <eric@webkit.org>
 
         * Scripts/build-testkjs: build fix... too many $$
