Update the list of skipped tests.
Three more tests are passing.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27520 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -2,6 +2,16 @@
 
         Reviewed by Simon.
 
+        Update the list of skipped tests.
+        
+        Three more tests are passing.
+
+        * platform/qt/Skipped:
+
+2007-11-07  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         add more passing test cases.
 
         * platform/qt/Skipped:
