Remove QWebPage::createFrame()
now that QWebFrame doesn't have virtual methods anymore, there
is no need for a createFrame() factory method in QWebpage.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27526 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-07  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
+        Remove QWebPage::createFrame()
+        
+        now that QWebFrame doesn't have virtual methods anymore, there
+        is no need for a createFrame() factory method in QWebpage.
+
+        * Api/qwebpage.cpp:
+        (QWebPagePrivate::createMainFrame):
+        * Api/qwebpage.h:
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::FrameLoaderClientQt::createFrame):
+
 2007-11-07  Simon Hausmann  <hausmann@kde.org>
 
         Reviewed by Lars Knoll <lars@trolltech.com>.
