Restructure the context menu classes for the Qt port. ContextMenu and ContextMenuItem don't store QActions/QMenus anymore but just store the action type, tag, title and optionally submenu as created in ContextMenu::populate(). For the actual Qt context menu we traverse this structure after sendContextMenuEvent and create a QMenu out of it. That menu is currently not functional anymore though.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27533 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -2,6 +2,43 @@
 
         Reviewed by Lars.
 
+        Restructure the context menu classes for the Qt port. ContextMenu and ContextMenuItem don't store
+        QActions/QMenus anymore but just store the action type, tag, title and optionally submenu as created
+        in ContextMenu::populate().
+        For the actual Qt context menu we traverse this structure after sendContextMenuEvent and create a QMenu
+        out of it. That menu is currently not functional anymore though.
+
+        WARNING: NO TEST CASES ADDED OR CHANGED
+
+        * platform/ContextMenu.h:
+        * platform/ContextMenuItem.h:
+        (WebCore::PlatformMenuItemDescription::PlatformMenuItemDescription):
+        * platform/PlatformMenuDescription.h:
+        * platform/qt/ContextMenuItemQt.cpp:
+        (WebCore::ContextMenuItem::ContextMenuItem):
+        (WebCore::ContextMenuItem::type):
+        (WebCore::ContextMenuItem::setType):
+        (WebCore::ContextMenuItem::action):
+        (WebCore::ContextMenuItem::setAction):
+        (WebCore::ContextMenuItem::title):
+        (WebCore::ContextMenuItem::setTitle):
+        (WebCore::ContextMenuItem::platformSubMenu):
+        (WebCore::ContextMenuItem::setSubMenu):
+        (WebCore::ContextMenuItem::setChecked):
+        (WebCore::ContextMenuItem::setEnabled):
+        * platform/qt/ContextMenuQt.cpp:
+        (WebCore::ContextMenu::ContextMenu):
+        (WebCore::ContextMenu::~ContextMenu):
+        (WebCore::ContextMenu::appendItem):
+        (WebCore::ContextMenu::itemCount):
+        (WebCore::ContextMenu::insertItem):
+        (WebCore::ContextMenu::setPlatformDescription):
+        (WebCore::ContextMenu::platformDescription):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Changed ContextMenu::setPlatformDescription for the Qt port to not show the qmenu right away
         but instead just behave as a normal setter that takes ownership of the platform menu description (the qmenu).
         Instead now QWebPage::contextMenuEvent() retrieves the QMenu after calling sendContextMenuEvent and calls exec()
