Update the editor actions when the selection changes.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27540 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,19 @@
 
         Reviewed by Lars.
 
+        Update the editor actions when the selection changes.
+
+        * Api/qwebpage.cpp:
+        (QWebPagePrivate::updateAction):
+        (QWebPagePrivate::updateEditorActions):
+        * Api/qwebpage_p.h:
+        * WebCoreSupport/EditorClientQt.cpp:
+        (WebCore::EditorClientQt::respondToChangedSelection):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Added cut/copy/paste actions to the toolbar of QtLauncher
 
         * QtLauncher/main.cpp:
