--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Lars.
 
+        Added undo/redo toolbar buttons, moved the location line edit into a separate toolbar.
+
+        * QtLauncher/main.cpp:
+        (MainWindow::MainWindow):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Update the editor actions when the selection changes.
 
         * Api/qwebpage.cpp:
