Implemented opening links in new windows
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27545 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,17 @@
 
         Reviewed by Lars.
 
+        Implemented opening links in new windows
+
+        * Api/qwebpage.cpp:
+        (frameLoadRequest):
+        (openNewWindow):
+        (QWebPage::webActionTriggered):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Added and implemented the "OpenLink" action.
 
         * Api/qwebpage.cpp:
