Added some more comments to the API after another round of API review with Lars.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27554 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,14 @@
 
         Reviewed by Lars.
 
+        Added some more comments to the API after another round of API review with Lars.
+
+        * Api/qwebpage.h:
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Moved QWebFrame::selectedText() to QWebPage::selectedText().
         
         The currently selected text is a property of the page as a whole.
