Renamed QWebPage::webAction() to QWebPage::action()
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27556 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,18 @@
 
         Reviewed by Lars.
 
+        Renamed QWebPage::webAction() to QWebPage::action()
+
+        * Api/qwebpage.cpp:
+        (QWebPagePrivate::createContextMenu):
+        * Api/qwebpage.h:
+        * QtLauncher/main.cpp:
+        (MainWindow::MainWindow):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Removed a bunch of slots/functions that are now available through the new actions API.
 
         * Api/qwebpage.cpp:
